# monty

./: .check_fun.c.swp  1-isdigit.c  3-strcmp.c  4-isalpha.c  CMakeLists.txt  README.md  add.c  add_dnodeint.c  check_command  check_fun.c  delete_dnodeint.c  div.c  div_dlinstin.c  free_all.c  free_data_t.c  free_line.c  free_stack_t.c  get_dnodeint.c  holberton.h  lists.h  main.c  monty  monty.h  mul.c  mul_dlistin.c  nop.c  pall.c  pint.c  pop.c  print_disitop.c  print_dlisitop.c  print_dlistint.c  push.c  strtok  sub.c  sub_dlistin.c  sum_dlistint.c  swap.c  swap_list.c
bytecodes/: 00.m
